Fixed issues with spacing scaling for extra images gallery and added uploaded = true state after re-loading image arrays

--- a/styles/pages/DetailsDesktop.module.scss
+++ b/styles/pages/DetailsDesktop.module.scss
@@ -258,7 +258,7 @@
     width: fit-content;
     z-index: 2;
     position: absolute;
-    top: 0px;
+    bottom: 0px;
     left: 0px;
 
     &:hover {
